// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieList Component renders "No results found" 1`] = `
<ul
  className="search-results"
>
  <li>
    No movies were retrieved.
  </li>
</ul>
`;

exports[`MovieList Component renders correctly 1`] = `
<ul
  className="search-results"
>
  <li
    className="movie"
    onClick={[Function]}
  >
    Rambo II
  </li>
</ul>
`;
